[gd_scene format=3 uid="uid://056wk8gk3v3x"]

[ext_resource type="Script" uid="uid://cq41bcmygvmwj" path="res://intro.gd" id="1_ayt76"]
[ext_resource type="FontFile" uid="uid://b2dpnni8aexyi" path="res://resources/Domine-VariableFont_wght.ttf" id="1_s2ta7"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ayt76"]
bg_color = Color(0, 0, 0, 1)

[node name="intro" type="Panel" unique_id=638270773]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ayt76")
script = ExtResource("1_ayt76")

[node name="text" type="VBoxContainer" parent="." unique_id=891565288]
custom_minimum_size = Vector2(360, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -157.0
offset_top = -64.5
offset_right = 157.0
offset_bottom = 64.5
grow_horizontal = 2
grow_vertical = 2

[node name="line0" type="Label" parent="text" unique_id=569429786]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("1_s2ta7")
text = "Give a man a hammer,"

[node name="line1" type="Label" parent="text" unique_id=1781185180]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("1_s2ta7")
text = "        and he will see nails for a day."

[node name="line2" type="Label" parent="text" unique_id=1556920772]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("1_s2ta7")
text = "Give a man a fishing rod,"

[node name="line3" type="Label" parent="text" unique_id=1508177540]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("1_s2ta7")
text = "        and he will see fish for the rest of his life."

[node name="line4" type="Label" parent="text" unique_id=243822816]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("1_s2ta7")
text = "
- Albert Einstein, The Art of Fishing        "
horizontal_alignment = 2

[node name="line5" type="Label" parent="." unique_id=890139288]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -35.5
offset_top = -155.0
offset_right = 35.5
offset_bottom = -132.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("1_s2ta7")
text = "Press any key to continue"
